app/frontend/packs/styles/themes/syntax_highlighting.scss
$text: rgb(226, 226, 226);
$background: rgb(41, 42, 43);

.code-block {
  background-color: $background;
  color: $text;
  font-weight: 400;
  line-height: 1.25;
  overflow-x: scroll;
  padding: 1em 1.1em;
  margin: 1em 0em 1.5em 0em;
  border-radius: 0.2em;

  table td {
    padding: 5px;
  }
  
  table pre {
    margin: 0;
  }
  
  .w {
    background-color: $background;
    color: $text;
  }
  
  .c,
  .ch,
  .cd,
  .cm,
  .cpf,
  .c1,
  .cs {
    color: #848383;
  }
  
  .cp {
    color: #f4bf75;
  }
  
  .nt {
    color: #f4bf75;
  }
  
  .o,
  .ow {
    color: #d0d0d0;
  }
  
  .p,
  .pi {
    color: #d0d0d0;
    
  }
  
  .gi {
    color: #90a959;
    
  }
  
  .gd {
    color: #ac4142;
    
  }
  
  .gh {
    background-color: #151515;
    color: #6a9fb5;
    font-weight: bold;
  }
  
  .k,
  .kn,
  .kp,
  .kr,
  .kv {
    color: rgb(255, 106, 172);
    
  }
  
  .kc {
    color: #d28445;
    
  }
  
  .kt {
    color: #d28445;
    
  }
  
  .kd {
    color: #d28445;
    
  }
  
  .s,
  .sa,
  .sb,
  .sc,
  .dl,
  .sd,
  .s2,
  .sh,
  .sx,
  .s1,
  .si,
  .err {
    color: rgb(24, 248, 211);
    
  }
  
  .sr {
    color: #75b5aa;
    
  }
  
  .se {
    color: #8f5536;
    
  }
  
  .nn {
    color: #f4bf75;
  }
  
  .nc,
  .no,
  .ss {
    color: rgb(249, 5, 89);
  }

  .na {
    color: #6a9fb5;
  }

  .nf {
    color: $text;
  }

  .n {
    color: rgb(255, 175, 97);
  }
  
  .m,
  .mb,
  .mf,
  .mh,
  .mi,
  .il,
  .mo,
  .mx {
    color: #e456b9;
  }
}

